[package]
name = "london_classical"
version = "0.1.0"
edition = "2021"
authors = ["Penelope Yong <penelopeysm@gmail.com>"]
description = "Fetch upcoming classical music concerts in London"
repository = "https://github.com/penelopeysm/london_classical"
default-run = "london_classical"

[lib]
path = "src/lib.rs"

[dependencies]
chrono = {version = "0.4.37", features = ["serde"]}
chrono-tz = "0.9.0"
deunicode = "1.6.0"
futures = "0.3.30"
html-escape = "0.2.13"
itertools = "0.14.0"
log = "0.4.22"
pretty_env_logger = "0.5.0"
regex = "1.10.4"
reqwest = {version = "0.12.3", features = ["json"]}
scraper = "0.19.0"
serde = {version = "1.0.197", features = ["derive"]}
serde_json = "1.0.115"
tokio = {version = "1.37.0", features = ["full"]}
ts-rs = {version = "8.1.0", features = ["chrono-impl"]}
